--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url: https://gustavolsj.github.io
 # on GitHub Pages it is your github repository's name prefixed with a /
 baseurl: /coleccion-de-estudio
 # location of code, the full url to your github repository
-source-code: https://github.com/owikle/cb-multilingual-again
+source-code: https://gustavolsj.github.io/coleccion-de-estudio 
 
 ##########
 # SITE SETTINGS
