--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ metadata: metadata-col-estudio
 # Site/Organization Branding 
 #   Uncomment these and enter information for your organization (replacing the CDIL links and name below) if you'd like to brand your site with a logo
 #
-organization-name: "Arte Público Press"
+organization-name: "Gustavo Lozano"
 organization-link: https://artepublicopress.com/
 organization-logo-banner: /assets/img/APP_Logo_2019.png
 organization-logo-nav: /assets/img/app_logo_white_sm.png
